<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fon_480x800"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/tvW2mem"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnStartOffline"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/btnStartOffline" />

    <Button
        android:id="@+id/btnStartOnline"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btnStartOffline"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/btnStartOnline" />

    <Button
        android:id="@+id/btnNoProfile"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btnStartOnline"
        android:layout_centerHorizontal="true"
        android:text="@string/btnNoProfile" />

</RelativeLayout>