<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/titleFinished"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btnLater"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/later" />

    <Button
        android:id="@+id/btnTry"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/btnLater"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/btnLater"
        android:text="@string/startNow" />
    
</RelativeLayout>