<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnAddCouple"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/btnAddCouple" />

        <EditText
            android:id="@+id/etWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btnAddCouple"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/hintWord"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etTranslate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/etWord"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/hintTranslate"
            android:inputType="text" />

    </RelativeLayout>

    <ListView
        android:id="@+id/@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>